dobot/dobot_ws/log/build_2023-08-04_15-14-27/yolo_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg/object_detection_sub.py", line 15
    	def __init__(self)
    	                  ^
SyntaxError: expected ':'

  File "/home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg/object_detection_pub.py", line 80
    if __name__ == "__main__"
                             ^
SyntaxError: expected ':'

